Save file and widget fixed

--- a/app/src/main/res/layout-land/fragment_week.xml
+++ b/app/src/main/res/layout-land/fragment_week.xml
@@ -208,6 +208,18 @@
             android:layout_height="wrap_content"
             android:text="Générer" />
 
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enregistrer" />
+
+        <Button
+            android:id="@+id/btnLoad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Charger" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
