--- a/app/src/main/res/xml/next_plat_widget_info.xml
+++ b/app/src/main/res/xml/next_plat_widget_info.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/app_widget_description"
-    android:initialKeyguardLayout="@layout/today_widget2"
-    android:initialLayout="@layout/today_widget2"
+    android:initialKeyguardLayout="@layout/next_plat_widget"
+    android:initialLayout="@layout/next_plat_widget"
     android:minWidth="110dp"
-    android:minHeight="110dp"
+    android:minHeight="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:previewLayout="@layout/today_widget2"
+    android:previewLayout="@layout/next_plat_widget"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="2"
-    android:targetCellHeight="2"
+    android:targetCellHeight="1"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen|keyguard" />
