--- a/app/src/main/res/layout/fragment_week.xml
+++ b/app/src/main/res/layout/fragment_week.xml
@@ -5,10 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".WeekFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/weekPlanRecyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/week_plan_item" />
+        android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/weekPlanRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="10"
+            tools:listitem="@layout/week_plan_item" />
+
+        <Button
+            android:id="@+id/button_generate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/button_generate" />
+
+
+    </LinearLayout>
 
 </FrameLayout>
