--- a/app/src/main/res/layout/fragment_template.xml
+++ b/app/src/main/res/layout/fragment_template.xml
@@ -5,10 +5,24 @@
     android:layout_height="match_parent"
     tools:context=".TemplateFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/templateRecyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/template_item" />
+        android:orientation="vertical">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/templateRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scrollbars="vertical"
+            tools:listitem="@layout/template_item" />
+
+        <Button
+            android:id="@+id/button_default"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_default" />
+
+    </LinearLayout>
 </FrameLayout>
