--- a/app/src/main/res/layout/fragment_week.xml
+++ b/app/src/main/res/layout/fragment_week.xml
@@ -14,14 +14,14 @@
             android:id="@+id/weekPlanRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="10"
+            android:layout_weight="1"
+            android:scrollbars="vertical"
             tools:listitem="@layout/week_plan_item" />
 
         <Button
             android:id="@+id/button_generate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/button_generate" />
 
 
