--- a/app/src/main/res/layout/template_item.xml
+++ b/app/src/main/res/layout/template_item.xml
@@ -61,7 +61,6 @@
             android:layout_weight="1"
             android:ems="5"
             android:inputType="text"
-            android:text="Name"
-            android:visibility="invisible" />
+            android:text="Name" />
     </LinearLayout>
 </LinearLayout>
