separate current week / next week

--- a/app/src/main/res/layout/fragment_week.xml
+++ b/app/src/main/res/layout/fragment_week.xml
@@ -19,10 +19,10 @@
             tools:listitem="@layout/week_plan_item" />
 
         <Button
-            android:id="@+id/button_generate"
+            android:id="@+id/button_share"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button_generate" />
+            android:text="@string/button_share" />
 
 
     </LinearLayout>
