--- a/app/src/main/res/layout/fragment_lists.xml
+++ b/app/src/main/res/layout/fragment_lists.xml
@@ -11,8 +11,9 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/lists_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/button_reset"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0">
@@ -98,8 +99,9 @@
             android:id="@+id/button_reset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/lists_layout"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@string/button_reset" />
+            android:text="@string/button_reset"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
